syntax = "proto3";
option go_package = "/find-number-position-api;find_number_position_api";

package find_number_position_api;

service FindNumberPositionAPIService {
  rpc FindNumberPosition(FindNumberPositionRequest) returns (FindNumberPositionResponse);
}


message FindNumberPositionRequest {
  int64 number = 1;
}

message FindNumberPositionResponse {
  int64 position = 1;
}